# src/main/java/com/sunsetbeach/model/AuditAction.java
@@ -36,6 +36,8 @@ public enum AuditAction {
   
   BOOKING_RELOCATION_UNDONE("BOOKING_RELOCATION_UNDONE"),
   
+  BOOKING_REPRICED("BOOKING_REPRICED"),
+  
   BOOKINGS_EXPORTED("BOOKINGS_EXPORTED"),
   
   ROOM_PRICE_CHANGED("ROOM_PRICE_CHANGED"),
